# NorStorage_Sim

./: CMakeLists.txt  main.c
Dep/: Runtime.c  Runtime.h  SysCommon.h  util.c  util.h
SimDevModule/: SimDataFile_Opr.c  SimDataFile_Opr.h  SimDev_W25Qxx.c  SimDev_W25Qxx.h
Storage_Port/: Storage.c  Storage.h  Storage_Bus_Port.c  Storage_Bus_Port.h  Storage_Def.h  Storage_Dev_Port.c  Storage_Dev_Port.h
