project(Storage_Sim)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -g)
include_directories(Dep SimDevModule Storage_Port)
aux_source_directory(SimDevModule SOURCE)
aux_source_directory(Dep SOURCE)
aux_source_directory(Storage_Port SOURCE)
add_executable(Storage_Sim main.c ${SOURCE})
