project(Storage_Sim)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_C_FLAGS"${CMAKE_C_FLAGS} -g -O0")
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    add_definitions(-DLINUX)
elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    add_definitions(-DMAC)
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_definitions(-DWIN)
endif()
include_directories(Dep SimDevModule Storage_Port)
aux_source_directory(SimDevModule SOURCE)
aux_source_directory(Dep SOURCE)
aux_source_directory(Storage_Port SOURCE)
add_executable(Storage_Sim main.c ${SOURCE})
